Switch err-backend-gitter back to master branch
Errbot 4.0.0 is out, we can track the master branch again.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "extra_backends/err-backend-gitter"]
 	path = extra_backends/err-backend-gitter
 	url = https://github.com/errbotio/err-backend-gitter.git
-	branch = errbot-4.0
+	branch = master
 [submodule "repository"]
 	path = repository
 	url = https://github.com/errbotio/errbot.git
